...
                app:cornerRadius="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fullName"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/historyButton"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing="0.02"
                android:stateListAnimator="@null"
                android:text="VIEW HISTORY"
                android:textSize="10sp"
                app:cornerRadius="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fullName"
                app:layout_constraintTop_toBottomOf="@+id/profileButton" />

...
